# netbox-eol

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/: netbox-ci-config.py
.github/workflows/: ci.yml
netbox_eol/: __init__.py  crypto.py  forms.py  jobs.py  matching.py  models.py  navigation.py  sync.py  tables.py  template_content.py  urls.py  views.py
netbox_eol/client/: __init__.py  client.py  exceptions.py  models.py
netbox_eol/management/commands/: eol_sync.py
netbox_eol/migrations/: 0001_initial.py
netbox_eol/templates/netbox_eol/: dashboard.html  settings.html
netbox_eol/templates/netbox_eol/inc/: lifecycle_card.html
netbox_eol/tests/: test_models.py  test_settings.py  test_sync.py  test_views.py
tests/: conftest.py  test_client.py  test_crypto.py  test_matching.py
