[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-eol"
version = "0.1.0"
description = "NetBox plugin: enrich DeviceType/Device inventory with eol.network lifecycle + CISA KEV data."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Mike Torres" }]
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
test = [
    "pytest>=7",
]

[tool.setuptools.packages.find]
include = ["netbox_eol*"]
exclude = ["dev*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
